# dreamtraffic

./: .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  Dockerfile  README.md  check-deployment.sh  cover-letter-luma-ai-revised.md  deploy.sh  docker-compose.yml  pyproject.toml
data/: video-creative-brief.md
prototype/: README.md  index.html  netlify.toml  package-lock.json  package.json  vercel.json
prototype/src/: App.jsx  index.css
prototype/src/components/: ApprovalWorkflow.jsx  CampaignOverview.jsx  CampaignReport.jsx  CreativeStudio.jsx  DSPDashboard.jsx  SupplyChainMap.jsx  VastInspector.jsx
prototype/src/data/: approvalTimeline.js  campaign.js  creatives.js  dspStatus.js  supplyPaths.js  vastXml.js
prototype/src/lib/: supabase.js
src/dreamtraffic/: __init__.py  cli.py  config.py
src/dreamtraffic/agents/: __init__.py  compliance_reviewer.py  creative_director.py  definitions.py  supply_chain_analyst.py  trafficking_manager.py
src/dreamtraffic/approval/: __init__.py  notifications.py  workflow.py
src/dreamtraffic/db/: __init__.py  engine.py  migrations.py  models.py
src/dreamtraffic/dsp/: __init__.py  amazon.py  base.py  challenger.py  dv360.py  thetradedesk.py
src/dreamtraffic/exchange/: __init__.py  bidswitch.py  ssp.py
src/dreamtraffic/luma/: __init__.py  client.py
src/dreamtraffic/measurement/: __init__.py  fee_stack.py  vast.py  vendors.py
tests/: conftest.py  test_approval_workflow.py  test_cli.py  test_dsp_adapters.py  test_exchange_routing.py  test_fee_stack.py  test_luma_client.py  test_vast_measurement.py
(+8 files in other folders)
