[project]
name = "dreamtraffic"
version = "0.1.0"
description = "Full-stack creative pipeline for Luma AI Dream Machine — from video generation through programmatic trafficking"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.27",
    "lumaai>=1.0.0",
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.scripts]
dreamtraffic = "dreamtraffic.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dreamtraffic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
]
